# rabbitmq-labs

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
rs/: Cargo.toml
rs/src/: main.rs  rabbitmq.rs  redis_store.rs
rs/src/handlers/: collaborative_drawing.rs  game.rs  logger.rs  mod.rs  rpc.rs  simulator.rs  workers.rs
sv/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1749900260967-6de27b93681e5.mjs
sv/src/: App.svelte  app.css  router.js
sv/src/components/: CollaborativeDrawing.svelte  MessageFlowSimulator.svelte  MessageLogger.svelte  Navigation.svelte  NumberDoubler.svelte  RabbitMQCanvas.svelte  RaceGame.svelte  SinglePatternFlowSimulator.svelte  StatusChecker.svelte  TraditionalVsMessageBrokerComparison.svelte
sv/src/pages/: ComparisonPage.svelte  CoreFeaturesPage.svelte  DrawingPage.svelte  ExchangeTypesPage.svelte  GamePage.svelte  HomePage.svelte  LoggerPage.svelte  NewSimulationsPage.svelte  RpcPage.svelte  SimulatorPage.svelte  WorkersPage.svelte
