[package]
name = "rabbitmq-demos"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.3"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lazy_static = "1.4"